Overflow and Padding fixing

--- a/src/components/About/About.css
+++ b/src/components/About/About.css
@@ -10,6 +10,7 @@
   justify-content: center;
   padding: 6vh;
   text-align: center;
+  overflow-x: none;
 }
 
 .about-img:hover {
