--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -77,6 +77,7 @@
   justify-content: space-around;
   display: flex;
   height: 30%;
+  padding: 1rem 0;
 }
 
 @media (max-width: 992px) {
